fix: alignment of header on mobile view

--- a/src/app/components/header/header.sass
+++ b/src/app/components/header/header.sass
@@ -8,6 +8,7 @@
   max-width: 1150px
   color: #ffffff
   font-family: var(--font-montserrat), Arial, sans-serif
+  flex-wrap: wrap
 
   .logo
     display: flex
@@ -41,6 +42,8 @@
       gap: 20px
       margin: 0
       padding: 0
+      flex-wrap: wrap
+      justify-content: center
 
       li
         a
@@ -52,16 +55,20 @@
           &:hover
             color: #00ff88
 
-  @media (max-width: 768px)
-    .header
-      flex-direction: column
-      align-items: center
+@media (max-width: 768px)
+  .header
+    flex-direction: column
+    align-items: center
 
-      .nav
-        width: 100%
-        text-align: center
-        margin-top: 10px
+    .nav
+      margin-top: 20px
 
-      .nav ul
-        flex-direction: column
-        gap: 10px
+    .nav ul
+      flex-direction: row
+      flex-wrap: wrap
+      justify-content: center
+      gap: 10px
+
+      li
+        width: calc(33.333% - 10px) // Set width for 3 items per row
+        text-align: center // Center text inside items
