--- a/src/styles/imagerow.sass
+++ b/src/styles/imagerow.sass
@@ -81,7 +81,7 @@
         transform: scale(1.1)
         box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15)
 
-  @media (max-width: 636px)
+  @media (max-width: 768px)
     flex-wrap: wrap
     justify-content: center
     padding: 10px
