--- a/src/styles/landing.sass
+++ b/src/styles/landing.sass
@@ -92,6 +92,9 @@
     width: 100%
     margin-top: 50px
 
+    .hero-wrapper
+      display: block
+
     .hero-content
       margin-top: 20px
       margin-left: auto
